2017-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Pick Cart' dialog in 'src/rdlogeditb/pickcartdialog.cpp'
	and 'src/rdlogeditb/pickcartdialog.h'.
	* Added 'Group', 'Length', 'Label', 'Composer', 'Conductor',
	'Publisher', 'Client', 'Agency' and 'User Defined' fields to
	the LibraryModel class in 'src/common/librarymodel.cpp' and
	'src/common/librarymodel.h'.
	* Moved the 'Log', 'LogLine', 'LogModel' and 'LogListModel'
	classes from 'src/rdlogeditb/' to 'src/common/'.
2017-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CartFilterWidget' class in 'src/common/cartfilterwidget.cpp'
	and 'src/common/cartfilterwidget.h'.
2017-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up cart picking in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Got log saves working in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Insert Cart' button in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Delete' button in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Up' and 'Down' buttons in rdlogeditb(1).
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented button enable logic in 'src/rdlogeditb/editlogdialog.cpp'
	and 'src/rdlogeditb/editlogdialog.h'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Cut', 'Copy' and 'Paste' buttons.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented check for modified logs in
	'src/rdlogeditb/editlogdialog.cpp' and
	'src/rdlogeditb/editlogdialog.h'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Edit Log Entry' dialog to display a blank cart
	number field if no cart has been selected yet.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Enabled correct display of Chain, Marker and Track events
	in the 'Edit Log' dialog.
	* Enabled correct editing of Chain, Marker and Track events
	in the 'Edit Log Entry' dialog.