@@ -36,6 +36,7 @@ class LogListModel : public QAbstractTableModel
   LogListModel(QObject *parent=0);
   QString serviceName() const;
   QString logName(int row) const;
+  QString description(int row) const;
   QModelIndex index(const QString &logname) const;
   void update();
   int rowCount(const QModelIndex &parent=QModelIndex()) const;
